--- a/views/ElectionOptions.ejs
+++ b/views/ElectionOptions.ejs
@@ -64,7 +64,7 @@
         <% if (Running) { %>
             <div class="flex gap-2 text-center justify-center">
                 <div class="bg-blue-400 rounded w-fit px-4 py-1 text-center justify-center">
-                    <a href="" class="text-white">Preview results</a>
+                    <a href="/election/<%= id %>/results" class="text-white">Preview results</a>
                 </div>
                 <button onclick="endElection()" class=" text-center justify-center bg-purple-800 rounded w-fit px-4 py-1 hover:bg-purple-600">
                     <p class="text-white">End election</p>
